reworked server structure, implemented URL-Cleaner on /url endpoint, rewrote tests
