# back/docs/swagger.json
@@ -30,7 +30,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     },
                     "405": {
@@ -39,7 +39,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     }
                 }
@@ -77,7 +77,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     },
                     "405": {
@@ -121,7 +121,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     },
                     "405": {
@@ -169,13 +169,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     },
                     "405": {
@@ -184,7 +184,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     }
                 }
@@ -220,7 +220,67 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrMessage"
+                            "$ref": "#/definitions/services.ErrMessage"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed"
+                    }
+                }
+            }
+        },
+        "/docs/": {
+            "get": {
+                "description": "Serves Swagger Docs",
+                "tags": [
+                    "docs"
+                ],
+                "summary": "Serves Swagger Docs",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/url/": {
+            "post": {
+                "description": "Processes URLs depending on the requested operation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "url"
+                ],
+                "summary": "Process URL",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "RequestStruct",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RequestStruct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseStruct"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/services.ErrMessage"
                         }
                     },
                     "405": {
@@ -257,7 +317,29 @@
                 }
             }
         },
-        "server.ErrMessage": {
+        "models.RequestStruct": {
+            "description": "Process URL",
+            "type": "object",
+            "properties": {
+                "operation": {
+                    "description": "@Property\t\toperation string true \"Operation to perform\"\n@Enum\t\t\tcanonical, redirection, all",
+                    "type": "string"
+                },
+                "url": {
+                    "description": "@Property\t\turl string true \"URL to process\"",
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResponseStruct": {
+            "type": "object",
+            "properties": {
+                "processed_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "services.ErrMessage": {
             "description": "ErrMessage",
             "type": "object",
             "properties": {
